2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/openvassd.8.in: New default port is 9391.

2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (init_openvassd, main): Renamed any variables
	"iana_port" to "scanner_port". These are only used in this module.
	(main): Set default port to 9391.

2011-01-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/CMakeLists.txt: Add SYSCONFDIR to definitions.

	* src/openvassd.c (main): Return SYSCONFDIR instead of OPENVAS_SYSCONF_DIR
	for -y, to match the pre-cmake behaviour.

2011-01-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/preferences.c (preferences_new): Add preferences for vhost
	scanning to initial configuration file.

2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Reverted wrongly changed patch version.

	* INSTALL: Updated for OpenVAS-4.

2011-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c: Removed code path for not HAVE_SETSID.
	Removed code patch for HAVE_ADDR2ASCII and HAVE_INET_NETA.

2011-01-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c, src/attack.c, src/save_kb.c, src/pluginlaunch.c,
	src/oval_plugins.c, src/comm.c, src/pluginscheduler.c: Change include
	patch for nvt_categories.h.

	* .root-dir: Removed. This as a woraround file for the old build
	environment.

2011-01-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Removing framework for binary plugins as they are gone now.

	* src/nes_plugins.c: Removed.

	* src/CMakeLists.txt: Removed handling of module nes_plugins.

	* src/pluginload.c (init_plugin_classes): Removed nes_plugin_class
	from the class list.

	* src/pluginload.h (nes_plugin_class): Removed.

	* COPYING: Removed cnvt entries, renamed "openvassd/" to "src/"
	and added missing entry for openvas-rmuser.in.

2011-01-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
